--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/topBurguer
+spring.datasource.url=jdbc:mysql://localhost:3306/top_burguer
 spring.datasource.username=root
 spring.datasource.password=#@Bob_2015@#
  
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/top_burguer?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 
