--- a/top-burguer-front/package.json
+++ b/top-burguer-front/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "base64-img": "^1.0.4",
+    "base64-to-image": "^1.0.2",
     "boxicons": "^2.1.2",
+    "convert-base64-to-image": "^0.0.16",
     "framer-motion": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
